--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
         <dependency>
             <groupId>net.sourceforge.stripes</groupId>
             <artifactId>stripes</artifactId>
-            <!--<version>1.5.7</version>-->
+            <!--
+            Doesn't work with 1.5.7 : bug fixed
+            <version>1.5.7</version>
+            -->
             <version>1.5.8-SNAPSHOT</version>
         </dependency>
         <dependency>
